--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="map"></div>
 
-    <!-- Alcohol Level Display -->
+    <!-- Alcohol Level Display. -->
     <div id="alcohol-status">
         <h2>Alcohol Test Meter</h2>
         <p id="alcohol-value">Level: 0</p>
