--- a/index.html
+++ b/index.html
@@ -4,25 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DMCabs Services</title>
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
     <h1>DMCabs Services</h1>
     <button onclick="findUserLocation()">Find My Location</button>
     <button onclick="simulateDriverLocation()">Find Driver</button>
     <div id="map"></div>
-    <!-- Alcohol Test Meter Section -->
     <div id="alcohol-meter">
         <h3>Alcohol Test Meter</h3>
         <p id="alcohol-status">Alcohol Level: Normal</p>
     </div>
-
-    <!-- Leaflet JS -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <!-- Custom JavaScript -->
-   
+    
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
