--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <button onclick="simulateDriverLocation()">Find Driver</button>
     <div id="map"></div>
     <div id="alcohol-meter">
-        <h3>Alcohol Test Meter</h3>
-        <p id="alcohol-status">Alcohol Level: Normal</p>
+        <h2>Alcohol Test Meter</h2>
+        <p id="alcohol-value">Level: --</p>
+        <p id="alcohol-message">Checking...</p>
     </div>
-    
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js"></script>
 </body>
