--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <button onclick="findUserLocation()">Find My Location</button>
     <button onclick="simulateDriverLocation()">Find Driver</button>
     <div id="map"></div>
-    <div id="alcohol-meter">
-        <h2>Alcohol Test Meter</h2>
-        <p id="alcohol-value">Level: --</p>
-        <p id="alcohol-message">Checking...</p>
+    <div id="alcohol-meter-box">
+        <h3>Alcohol Test Meter</h3>
+        <div id="alcohol-message">Checking...</div>
     </div>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js"></script>
