--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <div id="alcohol-message">Checking...</div>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="your_script.js"></script> <!-- Replace with your JavaScript file name -->
+    <script src="script.js"></script> <!-- Replace with your JavaScript file name -->
 </body>
 </html>
