--- a/index.html
+++ b/index.html
@@ -3,27 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapbox & Alcohol Test</title>
+    <title>Driver Finder with Alcohol Test Meter</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <style>
-        #map {
-            height: 70vh;
-            width: 100%;
-        }
-        #alcohol-message {
-            margin-top: 15px;
-            text-align: center;
-            font-size: 18px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Linking external CSS file -->
 </head>
 <body>
     <button onclick="findUserLocation()">Find My Location</button>
     <button onclick="simulateDriverLocation()">Find Driver</button>
     <div id="map"></div>
-    <div id="alcohol-message">Checking...</div>
+    <div id="alcohol-meter">
+        <h3>Alcohol Test Meter</h3>
+        <p id="alcohol-message">Checking...</p>
+    </div>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="script.js"></script> <!-- Replace with your JavaScript file name -->
+    <script src="script.js"></script> <!-- Linking external JS file -->
 </body>
 </html>
