--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Driver Finder with Alcohol Test Meter</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <link rel="stylesheet" href="styles.css"> <!-- Linking external CSS file -->
 </head>
 <body>
-    <button onclick="findUserLocation()">Find My Location</button>
-    <button onclick="simulateDriverLocation()">Find Driver</button>
-    <div id="map"></div>
-    <div id="alcohol-meter">
-        <h3>Alcohol Test Meter</h3>
-        <p id="alcohol-message">Checking...</p>
+    <div class="container">
+        <div class="button-group">
+            <button onclick="findUserLocation()">Find My Location</button>
+            <button onclick="simulateDriverLocation()">Find Driver</button>
+        </div>
+        <div id="map"></div>
+        <div id="alcohol-meter">
+            <h3>Alcohol Test Meter</h3>
+            <p id="alcohol-message">Checking...</p>
+        </div>
     </div>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="script.js"></script> <!-- Linking external JS file -->
+    <script src="scripts.js"></script> <!-- Link to the JavaScript file -->
 </body>
 </html>
